// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connector mapStateToProps returns the correct object 1`] = `
Object {
  "autocomplete": undefined,
  "contacts": Array [
    Object {
      "avatarUrl": "https://s3.amazonaws.com/uifaces/faces/twitter/ecommerceil/128.jpg",
      "community": "Associate",
      "id": "71862",
      "name": "Ahmad Bernier",
    },
    Object {
      "avatarUrl": "https://s3.amazonaws.com/uifaces/faces/twitter/akmalfikri/128.jpg",
      "community": "Associate",
      "id": "72655",
      "name": "Leora Bahringer",
    },
    Object {
      "avatarUrl": "https://s3.amazonaws.com/uifaces/faces/twitter/markjenkins/128.jpg",
      "community": "Associate",
      "id": "72019",
      "name": "Vita Breitenberg",
    },
  ],
  "matches": Array [],
  "participantSearch": null,
  "participants": Array [
    Object {
      "avatarUrl": "https://s3.amazonaws.com/uifaces/faces/twitter/matthewkay_/128.jpg",
      "id": "72203",
      "name": "Brooks Funk",
    },
  ],
  "recentContacts": Array [],
}
`;

exports[`fetchPeople returns the correct action 1`] = `
Object {
  "graphql": Object {
    "query": "All the lonely people / Where do they all come from?",
    "variables": Object {
      "autocomplete": "Tchaikovs",
      "first": 100,
    },
  },
  "meta": Object {
    "extractModel": "Person",
  },
  "type": "FETCH_PEOPLE",
}
`;

exports[`findOrCreateThread returns the correct action 1`] = `
Object {
  "graphql": Object {
    "query": "All the lonely people / Where do they all come from?",
    "variables": Object {
      "participantIds": Array [
        "1",
        "2",
        "3",
      ],
    },
  },
  "meta": Object {
    "extractModel": "MessageThread",
  },
  "type": "FIND_OR_CREATE_THREAD",
}
`;
